--- a/index.html
+++ b/index.html
@@ -7,18 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/landingpage.css">
 </head>
 
 <body>
     <div class="navbar">
         <div class="primary">
-            <img class="logo" src="./assets/img/3.png">
-            <a href="#">A Propos</a>
-            <a href="#">La Ligue</a>
+            <a class="navButton2" href="./landingPage.html"><img class="logo" src="./assets/img/3.png"></a>
+            <a class="whiteText navButton" href="#">A Propos</a>
+            <a class="whiteText navButton" href="#">La Ligue</a>
         </div>
         <div class="compte">
-            <a href="">Compte</a>
-            <img class="logoProfil" src="./assets/img/profile.png">
+            <a class="whiteText navButton" href="">Compte</a>
+            <div class="navButton">
+                <div class="bckgProfil">
+                    <img class="logoProfil" src="./assets/img/loginLogo.png">
+                </div>
+            </div>
         </div>
     </div>
     <div id="main">
