--- a/landingPage.html
+++ b/landingPage.html
@@ -14,33 +14,65 @@
 
     <div class="navbar">
         <div class="primary">
-            <a href="#"><img class="logo" src="./assets/img/3.png"></a>
-            <a href="#">A Propos</a>
-            <a href="#">La Ligue</a>
+            <a class="navButton2" href="./index.html"><img class="logo" src="./assets/img/3.png"></a>
+            <a class="whiteText navButton" href="#">A Propos</a>
+            <a class="whiteText navButton" href="#">La Ligue</a>
         </div>
         <div class="compte">
-            <a href="">Compte</a>
-            <img class="logoProfil" src="./assets/img/profile.png">
+            <a class="whiteText navButton" href="">Compte</a>
+            <div class="navButton">
+                <div class="bckgProfil">
+                    <img class="logoProfil" src="./assets/img/loginLogo.png">
+                </div>
+            </div>
         </div>
     </div>
-    <div id="header">
-    </div>
-
 
     <div id="mainPage">
-        <h1>C'EST TOI LE HEROS !</h1>
+        <h1 class="whiteTitle">C'EST TOI LE HEROS !</h1>
         <div id="bulle">
+            <img src="./assets/img/DialogBubble.png" alt="">
             <p>Réveillez le héros qui est en vous ! <br> Sauvez vos proches et l’environnement<br> en réparant leurs appareils électroniques en panne et<br> affrontez vos amis dans ce défi. </p>
         </div>
-        <a class="start" href="">commencer</a>
+        <a class="startBtn" href="">commencer <img class="startBuble" src="./assets/img/bulle_1.png" alt=""></a>
     </div>
 
-    <div id="infos">
+    <div id="infosPage">
+        <h2 class="whiteText">LIBEREZ VOS PROCHES</h2>
+        <p class="whiteText">Gagnez des points en aidant<br> vos proches qui ont des<br> problèmes informatiques avec<br> leurs appareils.</p>
+
+        <div class="whiteBckgColor">
+            <h2>Sauvez l’environnement</h2>
+            <p>En aidant vos proches, vous allongez la<br> durée de vie de leurs appareils. Ce<br> faisant, vous vous placez à contre<br> courant de la production massive<br> d’appareils neufs, coûteuse pour<br> l’environnement.</p>
+            <h2>Le concept</h2>
+
+            <div class="steps">
+                <ul>
+                    <li><img class="vignette" src="./assets/img/contourVignette.png" alt="illustration"> Etape 1</li>
+                    <li><img class="vignette" src="./assets/img/contourVignette.png" alt="illustration"> Etape 2</li>
+                    <li><img class="vignette" src="./assets/img/contourVignette.png" alt="illustration"> Etape 3</li>
+                </ul>
+            </div>
+            <div class="chiffres">
+                <h2 class="whiteTitle">quelques chiffres</h2>
+                <ol class="liChiffres">
+                    <li>
+                        <h2 class="whiteTitle">12t</h2>
+                        <p class="whiteText">Co2<br>économisé</p>
+                    </li>
+                    <li>
+                        <h2 class="whiteTitle">2846</h2>
+                        <p class="whiteText">Héros</p>
+                    </li>
+                    <li>
+                        <h2 class="whiteTitle">1M</h2>
+                        <p class="whiteText">Appareils<br>sauvés</p>
+                    </li>
+                </ol>
+            </div>
+        </div>
 
     </div>
-
-
-
 
 </body>
 
