Accueil non logué Inscription Connexion

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fixlig-smash</title>
+    <link rel="stylesheet" href="./assets/css/nav.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/landingpage.css">
+    <link rel="stylesheet" href="./assets/css/footer.css">
+    <link rel="shortcut icon" type="image/ico" href="./assets/img/favicon.ico" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -42,6 +47,46 @@
             </a>
         </div>
     </div>
+
+    <div id="footer">
+        <div class="hautFooter">
+            <div class="partiFooter">
+                <h2 class="whiteTitle">liens utiles</h2>
+
+                <p class="whiteText">Acceuil</p>
+
+                <p class="whiteText">A propos</p>
+
+                <p class="whiteText">nous contacter</p>
+            </div>
+            <div class="barreSepaPart ">
+                <hr>
+            </div>
+            <div class="logoFooter">
+                <img class="footerLogo" src="./assets/img/3.png" alt="logo">
+            </div>
+            <div class="barreSepaPart ">
+                <hr>
+            </div>
+            <div class="partiFooter">
+                <h2 class="whiteTitle">nos reseaux</h2>
+
+                <i class="fab fa-instagram whiteText"></i>
+
+                <i class="fab fa-twitter whiteText"></i>
+
+                <i class="fab fa-facebook-f"></i>
+            </div>
+        </div>
+        <div class="barreSepa">
+            <hr>
+        </div>
+        <div class="footerBottom whiteTitle">
+            <h2 class="footerText">cgu</h2>
+            <h2 class="footerText">politique de confidentialite</h2>
+            <h2 class="footerText">mentions legales</h2>
+        </div>
+    </div>
 </body>
 
-</html>
+</html>class="footerText"
