--- a/index.html
+++ b/index.html
@@ -49,15 +49,22 @@
     </div>
 
     <div id="footer">
+        <div class="lienFooter">
+            <div class="footerTitle">
+                <h2 class="titreFooter whiteTitle">liens utiles</h2>
+            </div>
+            <div class="vide"></div>
+            <div class="footerTitle">
+                <h2 class="titreFooter whiteTitle">nos reseaux</h2>
+            </div>
+        </div>
         <div class="hautFooter">
             <div class="partiFooter">
-                <h2 class="whiteTitle">liens utiles</h2>
-
                 <p class="whiteText">Acceuil</p>
 
                 <p class="whiteText">A propos</p>
 
-                <p class="whiteText">nous contacter</p>
+                <p class="whiteText">Nous contacter</p>
             </div>
             <div class="barreSepaPart ">
                 <hr>
@@ -68,13 +75,10 @@
             <div class="barreSepaPart ">
                 <hr>
             </div>
+
             <div class="partiFooter">
-                <h2 class="whiteTitle">nos reseaux</h2>
-
                 <i class="fab fa-instagram whiteText"></i>
-
                 <i class="fab fa-twitter whiteText"></i>
-
                 <i class="fab fa-facebook-f"></i>
             </div>
         </div>
