--- a/landingPage.html
+++ b/landingPage.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="contentWrapper columnWrapper">
-                <h2 id="conceptTitle">Le concept</h2>
+                <h2 class="centerTitle">Le concept</h2>
                 <div class="contentWrapper">
                     <div class="contentItem2">
                         <img class="vignette" src="./assets/img/contourVignette.png" alt="illustration">
@@ -79,24 +79,27 @@
             </div>
 
             <div class="chiffres">
-                <h2 class="whiteTitle">quelques chiffres</h2>
-                <ol class="liChiffres">
-                    <li>
-                        <img class="imgChiffre1" src="./assets/img/chiffre_Co2.png" alt="illustration CO2">
-                        <h2 class="whiteTitle">12t</h2>
-                        <p class="whiteText">Co2<br>économisé</p>
-                    </li>
-                    <li>
-                        <img class="imgChiffre2" src="./assets/img/chiffre_Hero.png" alt="illustration héros">
-                        <h2 class="whiteTitle">2846</h2>
-                        <p class="whiteText">Héros</p>
-                    </li>
-                    <li>
-                        <img class="imgChiffre3" src="./assets/img/chiffreOrdi.png" alt="illustration ordinateur">
-                        <h2 class="whiteTitle">1M</h2>
-                        <p class="whiteText">Appareils<br>sauvés</p>
-                    </li>
-                </ol>
+                <img class="chiffresBg" src="./assets/img/bg-danger.png" alt="" srcset="">
+                <div class="contentWrapper columnWrapper fullWidth">
+                    <h2 class="whiteTitle centerTitle">quelques chiffres</h2>
+                    <ol class="liChiffres">
+                        <li>
+                            <img class="imgChiffre1" src="./assets/img/chiffre_Co2.png" alt="illustration CO2">
+                            <h2 class="whiteTitle">12t</h2>
+                            <p class="whiteText">Co2<br>économisé</p>
+                        </li>
+                        <li>
+                            <img class="imgChiffre2" src="./assets/img/chiffre_Hero.png" alt="illustration héros">
+                            <h2 class="whiteTitle">2846</h2>
+                            <p class="whiteText">Héros</p>
+                        </li>
+                        <li>
+                            <img class="imgChiffre3" src="./assets/img/chiffreOrdi.png" alt="illustration ordinateur">
+                            <h2 class="whiteTitle">1M</h2>
+                            <p class="whiteText">Appareils<br>sauvés</p>
+                        </li>
+                    </ol>
+                </div>
             </div>
             <div class="FAQ">
                 <h2 class="FAQfaq">FAQ</h2>
@@ -116,7 +119,7 @@
                         <button><p>Comment gagner des points ?</p></button>
                         <ol class="FAQText">
                             <li>
-                                <p>Chaque fois que vous arrivez à résoudre un problème informatique<br> de l’un de vos proches, vous gagnez un point. </p>
+                                <p>Chaque fois que tu arrives à résoudre un problème informatique<br> de l’un de tes proches, tu gagnes un point. </p>
                             </li>
                         </ol>
                     </li>
@@ -124,8 +127,7 @@
                         <button><p>Comment confirmer que j’ai aidé quelqu’un ?</p></button>
                         <ol class="FAQText">
                             <li>
-                                <p>Je signale à la plateforme que j’ai effectué une tâche.<br>Je renseigne l’adresse email ou le numéro de téléphone mobile de la personne que j’ai aidé.<br>Elle revra un lien cliquable pour confirmer qu’elle a bénéficié de
-                                    mon aide.
+                                <p>Je signale à la plateforme que j’ai effectué une tâche.<br>Je renseigne l’adresse email de la personne que j’ai aidé.<br>Elle reçoit un lien cliquable pour confirmer qu’elle a bénéficié de mon aide.
                                     <br>Dès que le bénéficiaire clique sur le lien, mon intervention est<br>validée.
                                 </p>
                             </li>
@@ -135,7 +137,7 @@
                         <button><p>Comment affronter ses amis ?</p></button>
                         <ol class="FAQText">
                             <li>
-                                <p>Vous pourrez ajouter vos amis à votre réseau afin de les affronter<br>pour savoir lequel d’entre vous sera le meilleur fixer. Chaque mois,<br>le meilleur recevra le badge de héros du mois.</p>
+                                <p>tu pourra ajouter tes amis à ton réseau afin de les affronter<br>pour savoir lequel d’entre vous est le meilleur fixer. Chaque mois,<br>le meilleur recevra le badge de héros du mois.</p>
                             </li>
                         </ol>
                     </li>
@@ -151,7 +153,7 @@
                         <button><p>Y a-t-il d’autres badges à obtenir ?</p></button>
                         <ol class="FAQText">
                             <li>
-                                <p>Oui. Il existe plusieurs badges selon les services que vous avez<br>effectués.</p>
+                                <p>Oui. Il existe plusieurs badges selon les services que tu a<br>effectué.</p>
                             </li>
                         </ol>
                     </li>
