Accueil accordion + footer + Form

--- a/connexion.html
+++ b/connexion.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/nav.css">
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/landingPage.css">
-    <link rel="stylesheet" href="./assets/css/connexion.css">
+    <link rel="stylesheet" href="./assets/css/formulaire.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
     <link rel="shortcut icon" type="image/ico" href="./assets/img/favicon.ico" />
     <title>Connexion</title>
@@ -19,6 +19,7 @@
         <div class="primary">
             <a class="navButton2" href="#"><img class="logo" src="./assets/img/3.png"></a>
             <a class="whiteText navButton" href="#">A Propos</a>
+            <a class="whiteText navButton" href="#">Smash</a>
             <a class="whiteText navButton" href="#">La Ligue</a>
         </div>
         <div class="compte">
@@ -34,7 +35,7 @@
     <div class="connecInscription">
         <div class="btnLogin">
             <a class="loginR" href="#">Login</a>
-            <a class="login" href="#">Creé un compte</a>
+            <a class="login" href="#">Creer un compte</a>
         </div>
         <div class="logoConnex">
             <img class="logoLogin" src="./assets/img/logoRougeJaune.png">
