--- a/footer.html
+++ b/footer.html
@@ -1,38 +1,43 @@
 <div id="footer">
-    <ol class="liFooter">
-        <li>
-            <h2 class="whiteTitle">liens utiles</h2>
-        </li>
-        <li>
-            <p class="whiteText">Acceuil</p>
-        </li>
-        <li>
-            <p class="whiteText">A propos</p>
-        </li>
-        <li>
-            <p class="whiteText">nous contacter</p>
-        </li>
-    </ol>
-    <img class="footerLogo" src="./assets/img/3.png" alt="logo">
-    <ol class="resFooter">
-        <li>
-            <h2 class="whiteTitle">nos reseaux</h2>
+    <div class="lienFooter">
+        <div class="footerTitle">
+            <h2 class="titreFooter whiteTitle">liens utiles</h2>
+        </div>
+        <div class="vide"></div>
+        <div class="footerTitle">
+            <h2 class="titreFooter whiteTitle">nos reseaux</h2>
+        </div>
+    </div>
+    <div class="hautFooter">
+        <div class="partiFooter">
+            <p class="whiteText">Accueil</p>
 
-        </li>
-        <li>
+            <p class="whiteText">A propos</p>
+
+            <p class="whiteText">Nous contacter</p>
+        </div>
+        <div class="barreSepaPart ">
+            <hr>
+        </div>
+        <div class="logoFooter">
+            <img class="footerLogo" src="./assets/img/3.png" alt="logo">
+        </div>
+        <div class="barreSepaPart ">
+            <hr>
+        </div>
+
+        <div class="partiFooter">
             <i class="fab fa-instagram whiteText"></i>
-        </li>
-        <li>
             <i class="fab fa-twitter whiteText"></i>
-        </li>
-        <li>
             <i class="fab fa-facebook-f"></i>
-        </li>
-    </ol>
+        </div>
+    </div>
+    <div class="barreSepa">
+        <hr>
+    </div>
     <div class="footerBottom whiteTitle">
-        <h2>cgu</h2>
-        <h2>politique de confidentialite</h2>
-        <h2>mentions legales</h2>
+        <h2 class="footerText">cgu</h2>
+        <h2 class="footerText">politique de confidentialite</h2>
+        <h2 class="footerText">mentions legales</h2>
     </div>
 </div>
-</body>
