--- a/inscription.html
+++ b/inscription.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/nav.css">
     <link rel="stylesheet" href="./assets/css/main.css">
-    <link rel="stylesheet" href="./assets/css/connexion.css">
+    <link rel="stylesheet" href="./assets/css/formulaire.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
     <title>Inscription</title>
 </head>
@@ -17,6 +17,7 @@
         <div class="primary">
             <a class="navButton2" href="#"><img class="logo" src="./assets/img/3.png"></a>
             <a class="whiteText navButton" href="#">A Propos</a>
+            <a class="whiteText navButton" href="#">Smash</a>
             <a class="whiteText navButton" href="#">La Ligue</a>
         </div>
         <div class="compte">
@@ -38,7 +39,7 @@
             <img class="logoLogin" src="./assets/img/logoRougeJaune.png">
         </div>
         <div class="inscription">
-            <div class="partie">
+            <div class="partieColumn">
                 <div class="groupeLogin">
                     <label class="labelLogin">Peudo</label>
                     <div class="input right">
@@ -53,7 +54,7 @@
                 </div>
 
             </div>
-            <div class="partie">
+            <div class="partieColumn">
                 <div class="groupeLogin">
                     <label class="labelLogin">Mot de passe</label>
                     <div class="input right">
