--- a/navbar.html
+++ b/navbar.html
@@ -2,7 +2,9 @@
     <div class="primary">
         <a class="navButton2" href="#"><img class="logo" src="./assets/img/3.png"></a>
         <a class="whiteText navButton" href="#">A Propos</a>
+        <a class="whiteText navButton" href="#">Smash</a>
         <a class="whiteText navButton" href="#">La Ligue</a>
+
     </div>
     <div class="compte">
         <a class="whiteText navButton" href="">Compte</a>
