profil + js accordion

--- a/league.html
+++ b/league.html
@@ -33,7 +33,11 @@
     </div>
 
     <div id="leaguePage">
+        <h1 class="whiteText titleTop">top 10 des heros du mois</h1>
+        <ol>
+            <li><img class="logoProfilTop" src="./assets/img/loginLogo.png"></li>
 
+        </ol>
     </div>
 
     <div id="footer">
