--- a/profil.html
+++ b/profil.html
@@ -14,7 +14,36 @@
 </head>
 
 <body>
+    <div class="navbar">
+        <div class="primary">
+            <a class="navButton2" href="#"><img class="logo" src="./assets/img/3.png"></a>
+            <a class="whiteText navButton" href="#">A Propos</a>
+            <a class="whiteText navButton" href="#">Smash</a>
+            <a class="whiteText navButton" href="#">La Ligue</a>
 
+        </div>
+        <div class="compte">
+            <a class="whiteText navButton" href="">Compte</a>
+            <div class="navButton">
+                <div class="bckgProfil">
+                    <img class="logoProfil" src="./assets/img/loginLogo.png">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <img src="./../assets/img/pp.png">
+    <p>23 amis héros</p>
+    <p>PCCHAN</p>
+    <p>Néophyte</p>
+    <p>NIVEAU 0</p>
+    <P>2 sauvetages réalisés au total !</P>
+    <p>2 personnes sauvés</p>
+    <p>Type d'appareils le plus sauvés : ordinateur !</p>
+    <p>Héros depuis 28 jours !</p>
+    <p>RANKING AMIS</p>
+    <p>BADGES</p>
+    <input type="button" value="DECONNEXION">
 </body>
 
 </html>
